--- a/src/main/resources/templates/sighin.html
+++ b/src/main/resources/templates/sighin.html
@@ -13,7 +13,7 @@
         <form action="/users" method="POST">
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+                <input type="email" class="form-control" id="email" name="username" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
